--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dots_indicator: ^2.1.0
+  # firebase_core: ^3.12.1
   flutter:
     sdk: flutter
-  dots_indicator: ^2.1.0
   smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
